fix: updated use of checkSecretCode()

--- a/Tutoriel/index.html
+++ b/Tutoriel/index.html
@@ -123,7 +123,7 @@
     <div class="secret-code-container" style="margin-top: 50px;">
       <label for="secret-code">Code secret :</label>
       <input type="password" id="secret-code" />
-      <button onclick="checkSecretCode()">Vérifier</button>
+      <button onclick="checkSecretCode('pygame', 'more/index2.html')">Vérifier</button>
     </div>
     
     
