fix: added secret code

--- a/Tutoriel/more/index2.html
+++ b/Tutoriel/more/index2.html
@@ -96,6 +96,17 @@
         Normalement tu as une fenêtre qui s'affiche jusqu'à que tu décide de la fermer. 👍</p>
     </section></div>
 
+    <div class="secret-code-container" style="margin-top: 100px;">
+      <p>Comment appelle t'on la boucle qui permet que notre fenêtre ne se ferme pas ?</p>
+    </div>
+
+
+    <div class="secret-code-container" style="margin-top: 50px; margin-bottom: 50px;">
+      <label for="secret-code">Code secret :</label>
+      <input type="password" id="secret-code" />
+      <button onclick="checkSecretCode('infinie', 'index3.html')">Vérifier</button>
+    </div>
+
   <footer>
     <p>Réalisé avec ❤️ par Anthony & Sarah (mais surtout Sarah...)</p>
   </footer>
