fix: fixed gif position

--- a/Tutoriel/more/index4.html
+++ b/Tutoriel/more/index4.html
@@ -39,17 +39,17 @@
         <p>Maintenant a toi d'essayé de fait la même chose mais pour la hauteur cette fois ci ! (petit indice on utilisera y).</p>
         
         </section>
-        <div class="gif-container" style="width: 300px; height: 300px; margin-right: 450px; margin-top: 50px;">
+        <div class="gif-container" style="width: 300px; height: 300px; margin-right: 450px;">
             <div class="tenor-gif-embed" data-postid="14003779" data-share-method="host" data-aspect-ratio="1.78571" data-width="200%">
             <a href="https://tenor.com/view/anime-love-anime-slam-face-against-wall-girl-against-wall-anime-girls-gif-14003779">Anime Love Anime Slam GIF</a>
             from <a href="https://tenor.com/search/anime+love-gifs">Anime Love GIFs</a></div>
             <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-            <div class="gif-container" style="width: 300px; height: 300px; margin-right: 450px; margin-top: 250px;">
-          <div class="tenor-gif-embed" data-postid="16157006" data-share-method="host" data-aspect-ratio="1.50943" data-width="200%">
+            <div class="gif-container" style="width: 300px; height: 300px; margin-left: 290px; margin-top: 250px;">
+          <div class="tenor-gif-embed" data-postid="16157006" data-share-method="host" data-aspect-ratio="1.50943" data-width="150%">
             <a href="https://tenor.com/view/astro-boy-go-through-anime-wall-break-through-gif-16157006">Astro Boy Go Through GIF</a>
             from <a href="https://tenor.com/search/astro+boy-gifs">Astro Boy GIFs</a></div>
             <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-            </div>
+          </div>
         </div>
         </div>
         
