--- a/Tutoriel/more/index5.html
+++ b/Tutoriel/more/index5.html
@@ -97,6 +97,7 @@
 
         <br>
 
+        <h1>BONUS POUR LES COURAGEUX</h1>
         <p>Normalement à ce stade, tu dois te dire que c'est déjà très bien mais que ça va beaucoup trop vite. Et tu as parfaitement raison !</p>
         <p>C'est donc pour cela que nous allons limiter les ips (images par secondes ou fps frames per seconds) à 60. Tu vas voir ça nous fait modifier pas mal de trucs,
             mais au moins ça ira moins vite.</p>
