fix: index 4 have a password now

--- a/Tutoriel/more/index4.html
+++ b/Tutoriel/more/index4.html
@@ -66,6 +66,16 @@
       </div>
     </section></div>
 
+    <div class="secret-code-container" style="margin-top: 100px;">
+      <p>Qu'est-ce qui nous empêche de traverser les murs ? (le mot est au pluriel)</p>
+  </div>
+  
+  <div class="secret-code-container" style="margin-top: 50px; margin-bottom: 50px;">
+      <label for="secret-code">Code secret :</label>
+      <input type="password" id="secret-code" />
+      <button onclick="checkSecretCode('collisions', 'index5.html')">Vérifier</button>
+  </div>
+
   <footer>
     <p>Réalisé avec ❤️ par Anthony & Sarah (mais surtout Sarah...)</p>
   </footer>
