fix: add path to idex9 and add some lines to index9

--- a/Tutoriel/more/index8.html
+++ b/Tutoriel/more/index8.html
@@ -56,6 +56,16 @@
 
         <p>Une fois tout ça fini normalement tout devrait fonctionner comme sur des roulettes !</p>
 
+        <div class="secret-code-container" style="margin-top: 100px;">
+            <p>Comment appelle-t-on le type de variable dans lequel on stoque les points de vie des ennemies ?</p>
+        </div>
+    
+        <div class="secret-code-container" style="margin-top: 50px; margin-bottom: 50px;">
+          <label for="secret-code">Code secret :</label>
+          <input type="password" id="secret-code" />
+          <button onclick="checkSecretCode('tableau', 'index9.html')">Vérifier</button>
+        </div>
+
     <footer>
         <p>Réalisé avec ❤️ par Anthony & Sarah (mais surtout Sarah...)</p>
     </footer>
